Segunda parte do desenvolvimento do projeto
